# CMakeTemplate

./: .clang-tidy  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  CMakeTemplate.cpp  CMakeTemplate.h  main.cpp
tests/: CMakeLists.txt  TestCMakeTemplate.cpp
